--- a/mobile_scanface/pubspec.yaml
+++ b/mobile_scanface/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.11.2
+  google_mlkit_face_mesh_detection: ^0.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
